ADD_EXECUTABLE(
        main.c
        mandelbrot_set.c
        julia_set.c
        multibrot_set.c
        mandelbox.c
        multicron.c
        burning_ship.c
        spider_set.c
        newton_fractals.c
        key_hook.c
        utils_1.c
        utils_2.c
        utils_3.c
        color.c
)